k8s/worker-deployment.yaml
# Still need to add env variables around connecting to Redis
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  # This does the work and may need more replicas
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: stephengrider/multi-worker
